# pair-api

./: .gitignore  README.md
Rust/: Cargo.toml
go/pair/: .dockerignore  Dockerfile  cicd.sh  docker-compose.yml  go.mod  go.sum  main.go
go/pair/pairapi/: pairapi.pb.go  pairapi_grpc.pb.go
go/pair/proto/: pairapi.proto
rust/: build.rs
rust/proto/: pairapi.proto
rust/src/: server.rs
